# gnome-documents-mirror

./: .gitignore  Makefile.am  NEWS  autogen.sh  configure.ac  gnome-documents.doap
data/: Makefile.am  gnome-documents-search-provider.ini  gnome-documents.appdata.xml.in  gnome-documents.desktop.in.in
getting-started/: Makefile.am
m4/: getting-started.m4
man/: Makefile.am  gnome-documents.xml
po/: LINGUAS  POTFILES.in  POTFILES.skip  ar.po  as.po  be.po  bg.po  bn_IN.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  el.po  en_GB.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fur.po  ga.po  gl.po  gu.po  he.po  hi.po  hu.po  id.po  it.po  ja.po  kk.po  kn.po  ko.po  lt.po  lv.po  ml.po  mr.po  nb.po  or.po  (+20 more)
src/: Makefile-js.am  Makefile-lib.am  Makefile-miner.am  Makefile.am  application.js  changeMonitor.js  documents.js  edit.js  embed.js  global.js  gnome-documents-search-provider.in  gnome-documents.gresource.xml  gnome-documents.in  main.js  mainToolbar.js  mainWindow.js  manager.js  miners.js  notifications.js  offsetController.js  org.gnome.Documents.SearchProvider.service.in  password.js  places.js  presentation.js  preview.js  properties.js  query.js  search.js  searchbar.js  selections.js  sharing.js  shellSearchProvider.js  sources.js  trackerController.js  trackerUtils.js  utils.js  view.js  windowMode.js
src/lib/: gd-bookmarks.h  gd-nav-bar.c  gd-nav-bar.h  gd-pdf-loader.c  gd-pdf-loader.h  gd-places-bookmarks.c  gd-places-links.c  gd-places-page.c  gd-places-page.h  gd-sidebar-thumbnails.c  gd-thumb-nav.c  gd-utils.c  gd-utils.h
src/miner/: gd-gdata-miner.c  gd-miner-tracker.c  gd-miner.c  gd-miner.h  (+2 more)
(+4 files in other folders)
